# devinclaw-federal

./: .gitignore  GUARDRAILS.md  Makefile  README.md  SECURITY.md  SKILLS-MAP.md  SOUL.md  TEST-PLAN.md  TOOLS.md  docker-compose.yml  pyproject.toml  setup.sh
audit/: README.md  arena-config.json  audit-template.json  constitution-template.json  guardrail-config.json  sdlc-checklist.json  skill-descriptors.json
audit/artifact-schemas/: evidence-pack.schema.json  verification-record.schema.json
compliance/: README.md
compliance/devin/: knowledge.md  playbook.md
dashboard/: next.config.js  package.json
deepwiki/: README.md  mcp-config.json
docker/: Dockerfile.api  Dockerfile.dashboard  nginx.conf
docs/: ARCHITECTURE.md  FAQ.md  INTEGRATION.md  MCP-GUIDE.md  QUICK-START.md  SDLC-MAPPING.md  SELF-EVOLVING.md  USE-CASES.md  VERIFICATION-SYSTEM.md
knowledge/: README.md  cobol-converter.md  db-architect.md  enterprise-modernizer.md  oracle-migrator.md  security-auditor.md  test-engineer.md
mcp/: README.md  devin-mcps.json  openclaw-mcps.json
playbooks/: containerize-app.devin.md  convert-cobol.devin.md  legacy-analysis.devin.md  migrate-plsql.devin.md  parallel-migration.devin.md  rationalize-db.devin.md  security-remediation.devin.md  test-generation.devin.md
scripts/: smoke_test.sh  upgrade_skills.py  validate_sdlc.py
sdd/: README.md
sdd/templates/: constitution.md  design.md  spec.md  tasks.md
skills-parser/: README.md
skills-parser/scripts/: batch_parse.py  parse_skill.py  (+1 more)
src/: config.py
tdd/: README.md
test-runs/: README.md
(+105 files in other folders)
